<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cmssi.museum</groupId>
    <artifactId>recolinline</artifactId>
    <version>0.3</version>

    <packaging>pom</packaging>
    <name>Museum Inventory - RecolInline platform</name>

    <developers>
        <developer>
            <name>Christophe MUNILLA</name>
            <email>cmunilla@cmssi.fr</email>
            <organization>CMSSI</organization>
            <roles>
                <role>Architect</role>
                <role>Admin</role>
                <role>Documentation</role>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>

	<repositories>  
	  	<repository>
	  		<id>central</id>
	  		<url>https://repo1.maven.org/maven2</url>
	  		<releases>
	  			<enabled>true</enabled>
	  		</releases>
	  		<snapshots>
	  			<enabled>false</enabled>
	  		</snapshots>
	  	</repository>
	  	<repository>
	  		<id>JBOSS</id>
	  		<url>https://repository.jboss.org/nexus/content/repositories/releases</url>
	  		<releases>
	  			<enabled>true</enabled>
	  		</releases>
	  		<snapshots>
	  			<enabled>false</enabled>
	  		</snapshots>
	  	</repository>
	  	<repository>
	  		<id>RedHat</id>
	  		<url>https://maven.repository.redhat.com/ga</url>
	  		<releases>
	  			<enabled>true</enabled>
	  		</releases>
	  		<snapshots>
	  			<enabled>false</enabled>
	  		</snapshots>
	  	</repository>
	  	<repository>
	  		<id>SpringIO</id>
	  		<url>https://repo.spring.io/libs-release</url>
	  		<releases>
	  			<enabled>true</enabled>
	  		</releases>
	  		<snapshots>
	  			<enabled>false</enabled>
	  		</snapshots>
	  	</repository>
	  	<repository>
	  		<id>Mulesoft</id>
	  		<url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
	  		<releases>
	  			<enabled>true</enabled>
	  		</releases>
	  		<snapshots>
	  			<enabled>false</enabled>
	  		</snapshots>
	  	</repository>	  	
	  	<repository>
	  		<id>Metova</id>
	  		<url>http://repo.metova.com/nexus/content/groups/public</url>
	  		<releases>
	  			<enabled>true</enabled>
	  		</releases>
	  		<snapshots>
	  			<enabled>false</enabled>
	  		</snapshots>
	  	</repository>
	</repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>2.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.0</version>
                    <configuration>
                        <source>11</source>
                        <target>11</target>                        
						<fork>true</fork>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.9.1</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <excludePackageNames>*.internal:*.internal.*</excludePackageNames>
                        <links>
                            <link>https://docs.oracle.com/en/java/javase/11/docs/api/index.html</link>
                        </links>
                        <version>true</version>
                        <show>protected</show>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>11</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

  <modules>
    <module>core</module>
    <module>database</module>
  </modules>
  
</project>